--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,19 @@
     <div class="title"></div>
     <div class="separator"></div>
     <div class="menu"></div>
+    <div class="separator"></div>
+    <div class="log">
+        <div class="tutut_log" id="log1"></div>
+        <div class="tutut_log" id="log2"></div>
+        <div class="tutut_log" id="log3"></div>
+        <div class="tutut_log" id="log4"></div>
+        <div class="tutut_log" id="log5"></div>
+        <div class="tutut_log" id="log6"></div>
+        <div class="tutut_log" id="log7"></div>
+        <div class="tutut_log" id="log8"></div>
+        <div class="tutut_log" id="log9"></div>
+        <div class="tutut_log" id="log10"></div>
+    </div>
 </body>
 
 </html>
