web: log vizualization

--- a/web/index.html
+++ b/web/index.html
@@ -15,17 +15,54 @@
     <div class="separator"></div>
     <div class="menu"></div>
     <div class="separator"></div>
-    <div class="log">
-        <div class="tutut_log" id="log1"></div>
-        <div class="tutut_log" id="log2"></div>
-        <div class="tutut_log" id="log3"></div>
-        <div class="tutut_log" id="log4"></div>
-        <div class="tutut_log" id="log5"></div>
-        <div class="tutut_log" id="log6"></div>
-        <div class="tutut_log" id="log7"></div>
-        <div class="tutut_log" id="log8"></div>
-        <div class="tutut_log" id="log9"></div>
-        <div class="tutut_log" id="log10"></div>
+    <div class="log_container">
+        <h1>Les dix derniers Tutut</h1>
+        <div class="log">
+            <div class="tutut_log" id="log1">
+                <div>Nom</div>
+                <div>Heure</div>
+            </div>
+            <div class="tutut_log" id="log2">
+                <div>Nom_data</div>
+                <div>Heure_data</div>
+            </div>
+            <div class="tutut_log" id="log3">
+                <div>Nom_data</div>
+                <div>Heure_data</div>
+            </div>
+            <div class="tutut_log" id="log4">
+                <div>Nom_data</div>
+                <div>Heure_data</div>
+            </div>
+            <div class="tutut_log" id="log5">
+                <div>Nom_data</div>
+                <div>Heure_data</div>
+            </div>
+            <div class="tutut_log" id="log6">
+                <div>Nom_data</div>
+                <div>Heure_data</div>
+            </div>
+            <div class="tutut_log" id="log7">
+                <div>Nom_data</div>
+                <div>Heure_data</div>
+            </div>
+            <div class="tutut_log" id="log8">
+                <div>Nom_data</div>
+                <div>Heure_data</div>
+            </div>
+            <div class="tutut_log" id="log9">
+                <div>Nom_data</div>
+                <div>Heure_data</div>
+            </div>
+            <div class="tutut_log" id="log10">
+                <div>Nom_data</div>
+                <div>Heure_data</div>
+            </div>
+            <div class="tutut_log" id="log11">
+                <div>Nom_data</div>
+                <div>Heure_data</div>
+            </div>
+        </div>
     </div>
 </body>
 
