--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,8 @@
     <title>Stutustiques</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/utils.js"></script>
 
     <link rel="stylesheet" href="style.css?rnd=23">
 </head>
