update: update to revision from prod

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="100000">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>Stutustiques</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-    <script src="scripts/utils.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/utils.js?1500"></script>
+    <script src="scripts/script.js?1500"></script>
 
     <link rel="stylesheet" href="style.css?rnd=23">
 </head>
@@ -27,6 +29,9 @@
                 <!-- <div id="btn4">Option 4</div> -->
             </div>
         </span>
+        <div id="refresh_div">
+            <img id="refresh" src="refresh.svg" alt="" height="20px" width="20px" margin="auto" />
+        </div>
     </div>
     <div class="separator"></div>
     <div class="tiles">
