feat: dyn graph init

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,10 @@
         <canvas id="chart_tutut_min"></canvas>
     </div>
     <div class="separator"></div>
+    <div id="div_dyn_chart">
+        <canvas id="chart_tutut_dyn"></canvas>
+    </div>
+    <div class="separator"></div>
     <div class="page-selector">
         <img class="arrow" id="arrow-left" src="arrow.svg" alt="" height="40px" width="40px" />
         <div class="page-number" id="page_number">Page 0</div>
