feat: controls are on the page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,6 +77,14 @@
     <div id="div_dyn_chart">
         <canvas id="chart_tutut_dyn"></canvas>
     </div>
+    <div id="progression"></div>
+    <div id="controls">
+        <div id="reset"></div>
+        <div id="slower"></div>
+        <div id="play"></div>
+        <div id="faster"></div>
+        <div id="skip"></div>
+    </div>
     <div class="separator"></div>
     <div class="page-selector">
         <img class="arrow" id="arrow-left" src="arrow.svg" alt="" height="40px" width="40px" />
