feat: tiles changed, awesome

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,26 +35,22 @@
         </div>
     </div>
     <div class="separator"></div>
-    <div class="tiles">
-        <div class="data">
-            <div class="data_title">Fastest Tutut</div>
-            <div class="data_name" id="fastest_name"></div>
-            <div class="data_value" id="fastest_value"></div>
+    <div id="tiles_container">
+        <div class="tile">
+            <div class="tile_title">Tutut le plus tôt</div>
+            <div class="data_container" id="fastest"></div>
         </div>
-        <div class="data">
-            <div class="data_title">Latest Tutut</div>
-            <div class="data_name" id="latest_name"></div>
-            <div class="data_value" id="latest_value"></div>
+        <div class="tile">
+            <div class="tile_title">Tutut le plus tard</div>
+            <div class="data_container" id="latest"></div>
         </div>
-        <div class="data">
-            <div class="data_title">Most Tutut in a row</div>
-            <div class="data_name" id="serie_name"></div>
-            <div class="data_value" id="serie_value"></div>
+        <div class="tile">
+            <div class="tile_title">Nombre d'erreurs</div>
+            <div class="data_container" id="errors"></div>
         </div>
-        <div class="data">
-            <div class="data_title">Most errors</div>
-            <div class="data_name" id="error_name"></div>
-            <div class="data_value" id="error_value"></div>
+        <div class="tile">
+            <div class="tile_title">Séries de tutut</div>
+            <div class="data_container" id="series"></div>
         </div>
     </div>
     <div class="separator"></div>
