feat: francais gfhdfjs jdskmdkdmqfksq

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,10 +90,10 @@
     <table id="log_table">
         <tr id="log_hd">
             <th id="Id">Id</th>
-            <th id="Name">Name</th>
+            <th id="Name">Nom</th>
             <th id="Date">Date</th>
-            <th id="Time">Time</th>
-            <th id="Serie">Serie</th>
+            <th id="Time">Heure</th>
+            <th id="Serie">Série</th>
         </tr>
     </table>
 
