--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,6 +52,10 @@
             <div class="tile_title">Séries de tutut</div>
             <div class="data_container" id="series"></div>
         </div>
+        <div class="tile">
+            <div class="tile_title">Nombre de tututs parfaits</div>
+            <div class="data_container" id="perfect"></div>
+        </div>
     </div>
     <div class="separator"></div>
     <div id="div_chart_tutut_pie">
