feat: display day in tutut race

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,7 +77,9 @@
     <div id="div_dyn_chart">
         <canvas id="chart_tutut_dyn"></canvas>
     </div>
-    <div id="progression"></div>
+    <div id="progression">
+        <div id="current_day"></div>
+    </div>
     <div id="controls">
         <div id="reset"></div>
         <div id="slower"></div>
