feat: tutut of the day tile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,6 +56,10 @@
             <div class="tile_title">Nombre de tututs parfaits</div>
             <div class="data_container" id="perfect"></div>
         </div>
+        <div class="tile">
+            <div class="tile_title">Tututs du jour</div>
+            <div class="data_container" id="daily"></div>
+        </div>
     </div>
     <div class="separator"></div>
     <div id="div_chart_tutut_pie">
