--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,6 +60,10 @@
             <div class="tile_title">Tututs du jour</div>
             <div class="data_container" id="daily"></div>
         </div>
+        <div class="tile">
+            <div class="tile_title">Tututs de la semaine</div>
+            <div class="data_container" id="weekly"></div>
+        </div>
     </div>
     <div class="separator"></div>
     <div id="div_chart_tutut_pie">
