feat: tututs on 2 weeks

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,6 +82,10 @@
         <canvas id="chart_tutut_min"></canvas>
     </div>
     <div class="separator"></div>
+    <div id="div_two_weeks">
+        <canvas id="chart_two_weeks"></canvas>
+    </div>
+    <div class="separator"></div>
     <div id="div_dyn_chart">
         <canvas id="chart_tutut_dyn"></canvas>
     </div>
