feat: tiles coloration by best value

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,31 +36,31 @@
     </div>
     <div class="separator"></div>
     <div id="tiles_container">
-        <div class="tile">
+        <div class="tile" id="tile_fastest">
             <div class="tile_title">Tutut le plus tôt</div>
             <div class="data_container" id="fastest"></div>
         </div>
-        <div class="tile">
+        <div class="tile" id="tile_latest">
             <div class="tile_title">Tutut le plus tard</div>
             <div class="data_container" id="latest"></div>
         </div>
-        <div class="tile">
+        <div class="tile" id="tile_errors">
             <div class="tile_title">Nombre d'erreurs</div>
             <div class="data_container" id="errors"></div>
         </div>
-        <div class="tile">
+        <div class="tile" id="tile_series">
             <div class="tile_title">Séries de tutut</div>
             <div class="data_container" id="series"></div>
         </div>
-        <div class="tile">
+        <div class="tile" id="tile_perfect">
             <div class="tile_title">Nombre de tututs parfaits</div>
             <div class="data_container" id="perfect"></div>
         </div>
-        <div class="tile">
+        <div class="tile" id="tile_daily">
             <div class="tile_title">Tututs du jour</div>
             <div class="data_container" id="daily"></div>
         </div>
-        <div class="tile">
+        <div class="tile" id="tile_weekly">
             <div class="tile_title">Tututs de la semaine</div>
             <div class="data_container" id="weekly"></div>
         </div>
