feat: rang moyen tile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,6 +64,10 @@
             <div class="tile_title">Tututs de la semaine</div>
             <div class="data_container" id="weekly"></div>
         </div>
+        <div class="tile" id="tile_speed">
+            <div class="tile_title">Rangs moyens</div>
+            <div class="data_container" id="speed"></div>
+        </div>
     </div>
     <div class="separator"></div>
     <div id="div_chart_tutut_pie">
