feat: tile response time

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,8 +65,12 @@
             <div class="data_container" id="weekly"></div>
         </div>
         <div class="tile" id="tile_speed">
-            <div class="tile_title">Rangs moyens</div>
+            <div class="tile_title">Rang du tutut moyen</div>
             <div class="data_container" id="speed"></div>
+        </div>
+        <div class="tile" id="tile_sec">
+            <div class="tile_title">Temps du tutut moyen</div>
+            <div class="data_container" id="sec"></div>
         </div>
     </div>
     <div class="separator"></div>
