feat: title load with the rest & resize of tiles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,39 +37,39 @@
     <div class="separator"></div>
     <div id="tiles_container">
         <div class="tile" id="tile_fastest">
-            <div class="tile_title">Tutut le plus tôt</div>
+            <div class="tile_title" id="title_fastest"></div>
             <div class="data_container" id="fastest"></div>
         </div>
         <div class="tile" id="tile_latest">
-            <div class="tile_title">Tutut le plus tard</div>
+            <div class="tile_title" id="title_latest"></div>
             <div class="data_container" id="latest"></div>
         </div>
         <div class="tile" id="tile_errors">
-            <div class="tile_title">Nombre d'erreurs</div>
+            <div class="tile_title" id="title_errors"></div>
             <div class="data_container" id="errors"></div>
         </div>
         <div class="tile" id="tile_series">
-            <div class="tile_title">Séries de tutut</div>
+            <div class="tile_title" id="title_series"></div>
             <div class="data_container" id="series"></div>
         </div>
         <div class="tile" id="tile_perfect">
-            <div class="tile_title">Nombre de tututs parfaits</div>
+            <div class="tile_title" id="title_perfect"></div>
             <div class="data_container" id="perfect"></div>
         </div>
         <div class="tile" id="tile_daily">
-            <div class="tile_title">Tututs du jour</div>
+            <div class="tile_title" id="title_daily"></div>
             <div class="data_container" id="daily"></div>
         </div>
         <div class="tile" id="tile_weekly">
-            <div class="tile_title">Tututs de la semaine</div>
+            <div class="tile_title" id="title_weekly"></div>
             <div class="data_container" id="weekly"></div>
         </div>
         <div class="tile" id="tile_speed">
-            <div class="tile_title">Rang du tutut moyen</div>
+            <div class="tile_title" id="title_speed"></div>
             <div class="data_container" id="speed"></div>
         </div>
         <div class="tile" id="tile_sec">
-            <div class="tile_title">Temps du tutut moyen</div>
+            <div class="tile_title" id="title_sec"></div>
             <div class="data_container" id="sec"></div>
         </div>
     </div>
