feat: olympic sorting (note finished)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,9 +64,9 @@
             <div class="tile_title" id="title_weekly"></div>
             <div class="data_container" id="weekly"></div>
         </div>
-        <div class="tile" id="tile_speed">
-            <div class="tile_title" id="title_speed"></div>
-            <div class="data_container" id="speed"></div>
+        <div class="tile" id="tile_medal">
+            <div class="tile_title" id="title_medal"></div>
+            <div class="data_container" id="medal"></div>
         </div>
         <div class="tile" id="tile_sec">
             <div class="tile_title" id="title_sec"></div>
