--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <script src="scripts/init.js?1500"></script>
+    <script src="scripts/tiles.js?1500"></script>
     <script src="scripts/utils.js?1500"></script>
     <script src="scripts/script.js?1500"></script>
 
